# optimizationVisualizer

./: CMakeLists.txt  README.md
src/: main.cpp
src/functionHelpers/: funcGen.h
src/optim/: losses.h
